--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
  </head>
  <body>
-    <button style="margin: 20px; background-color:black; color: white; border:none; border-radius: 10px; padding:20px" onclick="addBook()">Add a Book</button>
+    <button style="margin: 20px; background-color:black; color: white; border:none; border-radius: 10px; padding:20px; cursor: pointer" onclick="addBook()">Add a Book</button>
     <div class="library-container" id="lib-container">
       <div class="lib-header">
          <div class="title">Title</div>
